# tutorials

./: .gitignore  renovate.json
lessons/006/: main.tf
lessons/038/terraform/: provider.tf
lessons/040/: provider.tf
lessons/044/app/: Dockerfile
lessons/047/hello-app/: Dockerfile  package-lock.json  package.json
lessons/048/hello-app/: Dockerfile  package-lock.json  package.json
lessons/050/drage/: package-lock.json  package.json
lessons/051/app123/: package-lock.json  package.json
lessons/052/app123/: package-lock.json  package.json
lessons/053/infra-2/: main.tf
lessons/055/nginx/: Dockerfile
lessons/063/: versions.tf
lessons/069/aws-terraform/: 0-provider.tf  1-locals.tf  2-envs.tf  2-projects.tf  3-vpc.tf  4-router.tf  5-nat.tf  6-shared-vpc.tf  7-kubernetes.tf  8-firewall.tf
lessons/069/k8s/: 0-deployment.yaml
lessons/069/terraform/: 0-provider.tf
lessons/071/: Makefile
lessons/071/k8s/: 0-metrics-server.yaml  2-hpa.yaml
lessons/076/wall-e/: Dockerfile  package-lock.json  package.json
lessons/077/secret-access/: Dockerfile
lessons/082/app/: Dockerfile
lessons/084/: docker-compose.yaml
lessons/137/: docker-compose.yaml
lessons/141/: docker-compose.yaml
lessons/143/: docker-compose.yaml
lessons/145/: docker-compose.yaml
lessons/147/rust-app/: Cargo.toml  Dockerfile
lessons/148/: docker-compose.yaml
lessons/153/: docker-compose.yaml
lessons/169/: Dockerfile
lessons/187/: Dockerfile
lessons/199/: compose.yaml
lessons/209/: compose.yaml
lessons/210/: compose.yaml
lessons/236/: compose.yaml
(+246 files in other folders)
